--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav" >
+            <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link" href="index.html">About</a>
               </li>
@@ -33,17 +33,24 @@
           </div>
         </nav>
         <div class="container">
+          <div class="row">
+            <div class="col-lg-6">
+              
+    
         <div class="jumbotron">
-            <h1 class="display-3">Hello, world!</h1>
-            <img src="..." class="img-fluid" alt="Responsive image">
-            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-            <hr class="my-4">
-            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-            <p class="lead">
-              <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+            <h1>About Me</h1>
+            <hr>
+            <p>
+                <p><img src="assets/images/portfolio-photo.jpg" id="pic" alt="Desmon" width="200" height="177">"Do not go where the path may lead, go instead where there is no path and leave a trail." —Ralph Waldo Emerson
+            </p>
+            <p>
+                Hello, my name is Desmon. I’m a fun-loving and highly ambitious individual looking to make a positive impact on the world.
+                I truly do enjoy constructive and productive conversation, and will lend a helping hand to those in need
+                in a heartbeat. Want to make some magic happen? Shoot me <a href="contact.html" id="email">an email.</a>
             </p>
           </div>
-
+          </div>
+</div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
