--- a/contact.html
+++ b/contact.html
@@ -1,57 +1,84 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <title>Hello, world!</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
+        crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-    <div class="container">
-            <div class="topnav">
-                <a class="active" href="#home">Desmon Stanford</a>
-                <li style="float:right">
-                    <a href="index.html">About</a>
-                    <a href="portfolio.html">Portfolio</a>
-                    <a href="contact.html">Contact</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="index.html" style="color:white">Desmon Stanford</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav" style="float:right">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">About</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8">
+                <div class="jumbotron">
+                    <h1>Contact Me</h1>
+                    <hr>
+                    <form action="/action_page.php">
+                        Name
+                        <br>
+                        <input type="text" size="auto">
+                        <br> Email
+                        <br>
+                        <input type="text" size="auto">
+                        <br> Message
+                        <br>
+                        <textarea name="message" id="" cols="auto" rows="auto"></textarea>
+                        <br>
+                        <input type="submit" value="Submit">
+                    </form>
+                </div>
             </div>
-            <div class="section3">
-                <h1>Contact Me</h1>
-                <hr>
-                <form action="/action_page.php">
-                    Name
-                    <br>
-                    <input type="text" size="100%">
-                    <br> Email
-                    <br>
-                    <input type="text" size="100%">
-                    <br> Message
-                    <br>
-                    <textarea name="message" id="" cols="98" rows="16"></textarea>
-                    <br>
-                    <input type="submit" value="Submit">
-                </form>
+            <div class="col-lg-4">
+                <div class="card" style="width: 20rem;">
+                    <div class="card-body">
+                        <h4>Connect with me</h4>
+                        <hr>
+                        <a href="https://github.com/dlsstanford">
+                            <img src="assets/images/github-128.png" class="social" alt="GitHub" />
+                        </a>
+                        <a href="https://www.linkedin.com/in/desmon-stanford-5aa21984/">
+                            <img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" />
+                        </a>
+                        <a href="https://stackoverflow.com/users/8456622/desmon-stanford">
+                            <img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" />
+                        </a>
+                    </div>
+                </div>
             </div>
-            <div class="aside">
-                <h4>Connect with me</h4>
-                <hr>
-                <a href="https://github.com/dlsstanford">
-                    <img src="assets/images/github-128.png" class="social" alt="GitHub" />
-                </a>
-                <a href="https://www.linkedin.com/in/desmon-stanford-5aa21984/">
-                    <img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" />
-                </a>
-                <a href="https://stackoverflow.com/users/8456622/desmon-stanford">
-                    <img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" />
-                </a>
-            </div>
-            <footer>
-                <h3>@Copyright Desmon Stanford</h3>
-            </footer>
         </div>
     </div>
+    <footer>
+        <h3>@Copyright Desmon Stanford</h3>
+    </footer>
 </body>
 
 </html>
