--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Desmon Stanford</a>
+    <a class="navbar-brand" href="index.html" style="color:white" >Desmon Stanford</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
       aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="collapse navbar-collapse" id="navbarNav" style="float:right">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="index.html">About</a>
@@ -60,29 +60,30 @@
             <h4>Connect with me</h4>
             <hr>
             <a href="https://github.com/dlsstanford">
-              <img src="assets/images/github-128.png" class="social" alt="GitHub" />
+              <img src="assets/images/github-128.png" class="social" alt="GitHub"/>
             </a>
             <a href="https://www.linkedin.com/in/desmon-stanford-5aa21984/">
-              <img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" />
+              <img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn"/>
             </a>
             <a href="https://stackoverflow.com/users/8456622/desmon-stanford">
-              <img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" />
+              <img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow"/>
             </a>
           </div>
         </div>
       </div>
     </div>
-    <footer>
-        <h3>@Copyright Desmon Stanford</h3>
-    </footer>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
-      crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
-      crossorigin="anonymous"></script>
+  </div>
+  <footer>
+    <h3>@Copyright Desmon Stanford</h3>
+  </footer>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
